--- a/privacy.html
+++ b/privacy.html
@@ -48,7 +48,7 @@
 
 
 
-<p>Our website address is:  </p>
+<p>Our website address is:  https://olejholland.github.io/informacji/.</p>
 
 <p>Wir sind einen kleines und familiengeführtes Unternehmen, aus den Niederlanden</p>
 
